data/derived/comb/progs/unify/prog7740.ml.out
Characters 55-65:
  (n mod 10) @ digitsOfIntHelper ((n%10)/10);;
  ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
